--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rfdc": "^1.4.1"
+    "rfdc": "^1.4.1",
+    "string-math": "^1.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
